Switch to IntelliJ 2016.2